--- a/atkm/src/app/features/shuttle/shuttle.component.html
+++ b/atkm/src/app/features/shuttle/shuttle.component.html
@@ -6,7 +6,7 @@
   <!-- ======================= -->
 
   <header class="content-header">
-    <h1>home-content {{ configPanelCollapsed() }} / {{ sidebar().userContext.username }}</h1>
+    <h1>shuttle </h1>
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
