--- a/atkm/src/app/shared/components/atk-api/atk-api-sidebar-config/atk-api-sidebar-config.component.html
+++ b/atkm/src/app/shared/components/atk-api/atk-api-sidebar-config/atk-api-sidebar-config.component.html
@@ -254,7 +254,6 @@
       </div>
       }
 
-
       }
 
       <!-- ======================= -->
@@ -269,7 +268,7 @@
 
         <div class="actions-grid">
           <button class="action-btn" [disabled]="state().loading" (click)="triggerLoadData()">
-            <atk-icon name="action" color="var(--color-fg-orange)" [size]="14" />
+            <atk-icon name="action" color="var(--color-accent-fg)" [size]="14" />
             <span>{{ state().loading ? 'Loading...' : 'Load Data' }}</span>
           </button>
 
