🧱 start feat(endpoint): 2025.10.22.064608! ————————————————————

--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -17,9 +17,13 @@
       <atk-icon name="cross" color="currentColor" />
     </button>
 
-    <button class="navbar-btn" aria-label="Create something new" (click)="switchProfile()">
+    <button class="navbar-btn" aria-label="test-tube" (click)="switchProfile()">
       <atk-icon name="test-tube" color="currentColor" />
     </button>
+
+    <!-- <button class="navbar-btn big" aria-label="Chat-GPT" (click)="switchProfile()">
+      <atk-icon name="chatgpt" color="currentColor" viewBox="0 0 32 32" />
+    </button> -->
 
     <a class="logo" [href]="nav.logo.link" aria-label="Homepage">
       <!-- <atk-icon class="logo-icon" name="atk-logo" [size]="40" viewBox="0 0 40 40" color="currentColor" /> -->
