⚙️fix > atk-api > sidebar-config ———————————————————

--- a/atkm/src/app/features/shuttle/shuttle.component.html
+++ b/atkm/src/app/features/shuttle/shuttle.component.html
@@ -53,7 +53,8 @@
 
         <div class="section-content">
           <atk-icon class="terminal-toggle" name="triangle-down" color="var(--color-btn-bg-default)" />
-          <atk-bash configId="binance-debug-v2" [autoLoad]="true" />
+          <atk-api-bash [configId]="bashConfigId()" [autoLoad]="true" />
+          <!-- <atk-api-bash configId="binance-debug-v2" [autoLoad]="true" /> -->
           <!-- <atk-bash configId="binance-debug-v2" [autoLoad]="true" (configRequest)="onBashConfigRequest($event)"
             (dataLoaded)="onBashDataLoaded($event)" (errorOccurred)="onBashError($event)" /> -->
         </div>
@@ -135,4 +136,4 @@
 <!-- <atk-sidebar-config [sections]="config().configPanel.sections" [isCollapsed]="config().configPanel.isCollapsed"
   (togglePanel)="toggleConfigPanel()" /> -->
 
-<atk-sidebar-bash-config [isCollapsed]="configPanelCollapsed()" (togglePanel)="toggleConfigPanel()" />
+<atk-api-sidebar-config [isCollapsed]="configPanelCollapsed()" (togglePanel)="toggleConfigPanel()" />
