🈴 refact: all atk-api 2025.10.24.211154 step 02 ----------------------------------------

--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -31,8 +31,7 @@
     <div class="terminal-section">
       <div class="section-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
-        <atk-api-bash configId="binance-debug-v2" [autoLoad]="true" (dataLoaded)="onBashDataLoaded($event)"
-          (errorOccurred)="onBashError($event)" />
+        <atk-api-bash />
       </div>
       <!-- (configRequest)="onBashConfigRequest($event)" -->
       <div class="terminal-section">
