--- a/atkm/src/app/shared/components/atk-api/atk-api-bash/atk-api-bash.component.css
+++ b/atkm/src/app/shared/components/atk-api/atk-api-bash/atk-api-bash.component.css
@@ -34,6 +34,7 @@
 .bash-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   flex: 1;
   gap: 0;
   width: 45%;
