--- a/atkm/src/app/shared/components/atk-api/atk-api-bash/atk-api-bash.component.html
+++ b/atkm/src/app/shared/components/atk-api/atk-api-bash/atk-api-bash.component.html
@@ -26,6 +26,7 @@
     <!-- ======================= -->
 
     <section class="bash-section">
+
       <div class="bash-content">
 
         <!-- Editable terminal with directive -->
@@ -43,10 +44,6 @@
           <span class="bash-selection">Sel "{{ text }}"</span>
           }
 
-          <span class="bash-connection" [class]="'status-' + state().connectionStatus">
-            {{ state().connectionStatus | titlecase }}
-          </span>
-
           @if (state().loading) {
           <span class="bash-loading">Loading...</span>
           }
@@ -56,10 +53,14 @@
             {{ logs().length }} logs
           </span>
 
+          <span class="bash-connection" [class]="'status-' + state().connectionStatus">
+            {{ state().connectionStatus | titlecase }}
+          </span>
+
           <!-- Clear logs button -->
-          <button class="bash-clear-logs" (click)="clearLogs()" title="Clear logs">
+          <!-- <button class="bash-clear-logs" (click)="clearLogs()" title="Clear logs">
             <atk-icon name="trash" [size]="12" />
-          </button>
+          </button> -->
         </div>
       </div>
 
@@ -72,6 +73,11 @@
           <span>{{ state().connectionStatus }}</span>
         </div>
 
+        <div class="infos-item">
+          <atk-icon name="database" color="var(--color-btn-bg-emphasis)" [size]="24" />
+          <span>{{ state().tableData.length }} items</span>
+        </div>
+
         @if (state().responseMetadata?.responseTime) {
         <div class="infos-item">
           <atk-icon name="zap" color="var(--color-btn-bg-emphasis)" [size]="24" />
@@ -79,9 +85,16 @@
         </div>
         }
 
+        @if (state().responseMetadata?.fromCache) {
         <div class="infos-item">
-          <atk-icon name="database" color="var(--color-btn-bg-emphasis)" [size]="24" />
-          <span>{{ state().tableData.length }} items</span>
+          <atk-icon name="zap" color="var(--color-accent-fg)" [size]="24" />
+          <span>from cache</span>
+        </div>
+        }
+
+        <div class="infos-item">
+          <atk-icon name="file-text" color="var(--color-btn-bg-emphasis)" [size]="24" />
+          <span>{{ logs().length }} logs</span>
         </div>
       </div>
     </section>
