--- a/atkm/src/app/shared/components/atk-api/atk-api.component.html
+++ b/atkm/src/app/shared/components/atk-api/atk-api.component.html
@@ -67,7 +67,7 @@
     <div class="terminal-main">
       <div class="terminal-section">
         <div class="section-content">
-          <atk-icon class="terminal-toggle" name="triangle-down" color="var(--color-btn-bg-default)" />
+          <atk-icon class="terminal-toggle" [size]="18" name="triangle-right" color="var(--color-btn-bg-default)" />
           <atk-api-bash />
         </div>
       </div>
